# riscv-pke

./: CMakeLists.txt  Makefile  U202015630-李茗畦.doc  tags  模板-操作系统课程设计报告模板-since2022.3.doc
kernel/: elf.c  elf.h  kernel.c  pmm.c  pmm.h  process.c  process.h  rfs.c  riscv.h  sched.c  sched.h  strap.c  strap_vector.S  syscall.c  syscall.h  vfs.c  vmm.c
kernel/machine/: mtrap.c
spike_interface/: spike_file.c
user/: app_errorline.c  app_exec.c  app_long_loop.c  app_print_backtrace.c  app_read.c  app_relativepath.c  app_semaphore.c  app_singlepageheap.c  app_sum_sequence.c  user_lib.c  user_lib.h
挑战实验/挑战实验/answer_lab2_challenge2_singlepageheap/answer_lab2_challenge2_singlepageheap/: LICENSE.txt  README.md  answer.patch
挑战实验/挑战实验/answer_lab2_challenge2_singlepageheap/answer_lab2_challenge2_singlepageheap/kernel/: kernel.c  process.c  process.h  riscv.h  strap.c  syscall.c  syscall.h  vmm.c  vmm.h
挑战实验/挑战实验/answer_lab2_challenge2_singlepageheap/answer_lab2_challenge2_singlepageheap/kernel/machine/: mtrap.c
挑战实验/挑战实验/answer_lab2_challenge2_singlepageheap/answer_lab2_challenge2_singlepageheap/user/: app_singlepageheap.c  user_lib.c  user_lib.h
